bug squash on the sub-menu fullscreen flash

--- a/sites/all/themes/custom/bootstrap_subtheme_oandg/css/style.css
+++ b/sites/all/themes/custom/bootstrap_subtheme_oandg/css/style.css
@@ -308,7 +308,7 @@ hr {
     z-index: -99;
     top: 0px;
     left:187px;
-    width: 100%;
+    width: 187px;
     height: 100%;
     padding: 0px;
     background-color: #E0D9B8;
@@ -452,7 +452,6 @@ hr {
 #block-menu-menu-bottom-menu li > a .caret {
     display: none;
 }
-
 
 #block-menu-menu-bottom-menu .mason-dropdown {
     position: absolute;
